# Your-Little-Oyachi-2

./: .gitignore  README.md  electrobun.config.ts  index.html  package.json  test_room.bat  test_room.command  test_room.sh
.github/workflows/: electrobun-builds.yml  tauri-builds.yml
app/: index.html
app/src/: main.js
app/styles/: main.css
scripts/: build-desktop.bat  build-desktop.sh  build-electrobun.bat  build-electrobun.command  build-electrobun.sh  dev-server.bat  dev-server.command  dev-server.sh
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/bun/: main.ts
src/views/mainview/: index.html  index.ts
styles/: main.css
